--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="nav-links">
 
                     <ul class="flex f-w-600">
-                        <li><a href="index_ch.html">HOME</a></li>
+                        <li><a href="index.html">HOME</a></li>
                         <li><a href="about_ch.html">ABOUT</a></li>
                         <li><a href="project_ch.html">PROJECT</a></li>
                         <li><a href="contact_ch.html">CONTACT</a></li>
