--- a/project_ch.html
+++ b/project_ch.html
@@ -44,14 +44,14 @@
                     <img src="game.jpg" alt="">
                     <h3>Python Game</h3>
                     <p>The game is on memory testing where we have to remember the places of pictures of Cartoons.</p>
-                    <button class="btn btn2">Explore More</button>
+                    <button class="btn btn2" href="https://docs.google.com/presentation/d/1AQdEuykrdYmKiwxoJhuh2aIxgobbghwG/edit?usp=drive_link&ouid=114435134109219198411&rtpof=true&sd=true">Explore More</button>
                 </div>
 
                 <div class="portfolio-child">
                     <img src="WEATHER.jpg" alt="">
                     <h3>Weather Website</h3>
                     <p>The Prime objective of any weather app is the ability to display the weather minute basis accurately , hourly , weekly and even monthly.</p>
-                    <button class="btn btn2">Explore More</button>
+                    <button class="btn btn2"  href="https://docs.google.com/document/d/1yAZ37dqXQYPQo8rJzhrH-5PQfYaQ7c-KmFYoEvIQjBQ/edit?usp=sharing">Explore More</button>
                 </div>
             </div>
         </div>
