--- a/project_ch.html
+++ b/project_ch.html
@@ -44,7 +44,7 @@
                     <img src="game.jpg" alt="">
                     <h3>Python Game</h3>
                     <p>The game is on memory testing where we have to remember the places of pictures of Cartoons.</p>
-                    <button class="btn btn2" href="https://docs.google.com/presentation/d/1AQdEuykrdYmKiwxoJhuh2aIxgobbghwG/edit?usp=drive_link&ouid=114435134109219198411&rtpof=true&sd=true">Explore More</button>
+                    <a class="btn btn2" href="https://docs.google.com/presentation/d/1AQdEuykrdYmKiwxoJhuh2aIxgobbghwG/edit?usp=drive_link&ouid=114435134109219198411&rtpof=true&sd=true" role="button"> View Project </a>
                 </div>
 
                 <div class="portfolio-child">
