--- a/project_ch.html
+++ b/project_ch.html
@@ -51,8 +51,7 @@
                     <img src="WEATHER.jpg" alt="">
                     <h3>Weather Website</h3>
                     <p>The Prime objective of any weather app is the ability to display the weather minute basis accurately , hourly , weekly and even monthly.</p>
-                    <button class="btn btn2"  href="https://docs.google.com/document/d/1yAZ37dqXQYPQo8rJzhrH-5PQfYaQ7c-KmFYoEvIQjBQ/edit?usp=sharing">Explore More</button>
-                </div>
+                     <a class="btn btn2" href="https://docs.google.com/document/d/1yAZ37dqXQYPQo8rJzhrH-5PQfYaQ7c-KmFYoEvIQjBQ/edit?usp=sharing" role="button"> View Project </a>
             </div>
         </div>
     </section>
