--- a/contact_ch.html
+++ b/contact_ch.html
@@ -50,12 +50,48 @@
                     <h5>Email Id</h5>
                     <p>rajbharchanda383@gmail.com</p>
                 </div>
-                <div class="right-sec text-center">
-                    <form action="">
-                        Email : <input type="email" id="email-id"> <br>
-                        <button class="btn btn2">send Message</button>
+               <div class="center-sec">
+                    <h5>Contact No.</h5>
+                    <p>Mobile No. +9702105576</p>
+                    <h5>Email Id</h5>
+                    <p>rajbharchanda383@gmail.com</p>
+                </div>
+                <div class="container">
+                    <h1> <u> Contact Me </u></h1>
+                    <form id="contact" class="cntc_form">
+                        <div class="form-group">
+                            <label for="name"> Name : </label>
+                            <input type="text" id="name" name="name" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="email"> E-mail : </label>
+                            <input type="email" id="email" name="email" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="message"> Message : </label>
+                            <textarea id="message" name="message" required></textarea>
+                        </div>
+                        <div class="form-group">
+                            <button class="btn btn2">send Message</button>
+                        </div>
                     </form>
                 </div>
+    </section>
+    <script>
+        document.getElementById('contact').addEventListener('submit', function(event) {
+            event.preventDefault(); // Prevent form submission
+            var form = event.target;
+            var name = form.elements['name'].value;
+            var email = form.elements['email'].value;
+            var message = form.elements['message'].value;
+
+            var mailtoLink = 'mailto:rajbharchanda383@gmail.com' +
+                '?subject=' + encodeURIComponent('Contact Form Submission') +
+                '&body=' + encodeURIComponent('Name: ' + name + '\n\nEmail: ' + email + '\n\nMessage: ' + message);
+
+            window.location.href = mailtoLink;
+        });
+    </script>
             </div>
         </div>
     </section>
