--- a/project_ch.html
+++ b/project_ch.html
@@ -44,14 +44,14 @@
                     <img src="game.jpg" alt="">
                     <h3>Python Game</h3>
                     <p>The game is on memory testing where we have to remember the places of pictures of Cartoons.</p>
-                    <a class="btn btn2" href="https://docs.google.com/presentation/d/1AQdEuykrdYmKiwxoJhuh2aIxgobbghwG/edit?usp=drive_link&ouid=114435134109219198411&rtpof=true&sd=true" role="button"> View Project </a>
+                    <a class="btn btn2" href="https://docs.google.com/presentation/d/1Tc76hnuG9tJImMGiHZQsutTzDSYuXFE-/edit?usp=drive_link&ouid=103968563089731127032&rtpof=true&sd=true" role="button"> View Project </a>
                 </div>
 
                 <div class="portfolio-child">
                     <img src="WEATHER.jpg" alt="">
                     <h3>Weather Website</h3>
                     <p>The Prime objective of any weather app is the ability to display the weather minute basis accurately , hourly , weekly and even monthly.</p>
-                     <a class="btn btn2" href="https://docs.google.com/document/d/1yAZ37dqXQYPQo8rJzhrH-5PQfYaQ7c-KmFYoEvIQjBQ/edit?usp=sharing" role="button"> View Project </a>
+                     <a class="btn btn2" href="https://docs.google.com/document/d/1qkBENkk3lVaRQWMLA0vGtshJy-7iaNr-Li0Px2JMFMA/edit?usp=drive_link" role="button"> View Project </a>
             </div>
         </div>
     </section>
