--- a/about_ch.html
+++ b/about_ch.html
@@ -46,7 +46,7 @@
                 <!-- left side  -->
                 <div class="left flex2">
                     <h2 class="uppercase letter-spacing2">Web Desinger</h2>
-                    <p class="my-t-10">I am a professional web designer . I have done many projects for my clients. I am a part time freelancer and I do freelancing in part time.</p>
+                    <p class="my-t-10">I am a professional web designer . I have done many projects for my clients.</p>
 
                     <ul>
                         <li><span class="f-w-600"><u>Language known : </u></span></li>
